contour/ingressMulti.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: multihost
spec:
  rules:
  - host: mars.example.com
    http:
      paths:
      - backend:
          service:
            name: mars
            port:
              number: 80
        path: /
        pathType: Exact
  - host: saturn.example.com
    http:
      paths:
      - backend:
          service:
            name: saturn
            port:
              number: 80
        path: /
        pathType: Exact
status:
  loadBalancer: {}
